fixing message box to wrap text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,6 +138,8 @@ label {
 
 }
 tbody {
+  word-break: break-all;
+
   color: coral;
 }
 table thead tr td th { 
